# vulkan_minimal_compute

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: comp.spv  shader.comp
src/: main.cpp
